tests/neg/i6035_ignore_checkfile.scala
type i1 <: i1 = ; }  // error // error
